<resources>
    <string name="app_name">YellowOchre</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered">Not Registered</string>
    <string name="register">Register</string>
    <string name="firstname">First Name</string>
    <string name="familyname">Family Name</string>
    <string name="dateofbirth">MM/DD/YYYY</string>
    <string name="email">Email</string>
    <string name="already_registered">Already Registered</string>
    <string name="regpassword">Password</string>
    <string name="enter_quiz">Enter Quiz</string>
    <string name="instructions">Quiz Instructions</string>
    <string name="question_header">Question: 1/x</string>
    <string name="showscore"></string>
    <string name="quizhistory">Quiz history</string>
    <string name="playhistory">Last played</string>
    <string name="confirm">Confirm</string>
    <string name="gotoquiz">Go to Quiz</string>
</resources>