<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/bg3">

    <!--Register XML file which shows a image, background, register fields with Login/Register links -->

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:cropToPadding="false"

        android:paddingVertical="0dp"
        android:paddingHorizontal="0dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo6"
        />

    <EditText
        android:id="@+id/editText_firstname"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="#ffff"
        android:drawableLeft="@drawable/name"
        android:hint="@string/firstname"
        android:maxLength="30"
        android:paddingLeft="2dp"
        android:textColor="#8888" />

    <EditText
        android:id="@+id/editText_regpassword"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffff"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/password"
        android:hint="@string/regpassword" />

    <EditText
        android:id="@+id/editText_familyname"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffff"
        android:drawableLeft="@drawable/name"
        android:hint="@string/familyname" />

    <EditText
        android:id="@+id/editText_dob"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/dateofbirth"
        android:background="#ffff"
        android:drawableLeft="@drawable/dob"
        />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:background="#ffff"
        android:drawableLeft="@drawable/email"
        />

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:textColor="#ffff"
        android:background="#E4A425"
        android:text="@string/register"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:textColor="#ffff"
            android:text="@string/already_registered"/>

        <TextView
            android:id="@+id/textView_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:layout_marginTop="15dp"
            android:textColor="#075D68"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/login"/>

    </LinearLayout>
</LinearLayout>