<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity"
    android:theme="@style/AppTheme"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/bg3">

    <!--Main XML file which shows a image, background and login fields with Login/Register links-->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:cropToPadding="false"

        android:paddingVertical="0dp"
        android:paddingHorizontal="0dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo6"
        />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Welcome "
        android:textSize="30dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="#E177044D"
        android:id="@+id/instruction_heading"
        android:text="@string/quizhistory"
        android:textSize="30dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="#E177044D"
        android:id="@+id/playhistory"
        android:text="@string/playhistory"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textColor="#35302E"
        android:id="@+id/showscore"
        android:text="@string/showscore"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/button_quiz"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="#E4A425"
        android:text="@string/gotoquiz"/>

</LinearLayout>